@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.39 2005/01/16 04:04:36 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.40 2005/01/18 08:03:23 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  18 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Took out unnecessary setting of random livecd root password. the cd already
+  sets it randomly.
+  
   15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Took out an unneeded step from CC's run()
 
